# SceneBuilder

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  DIAGRAMS.md  NOTES.md  README.md  TODOS.md  pyproject.toml  test_scene_data.json
LLM_Logs/: roo_task_jul-29-2025_6-47-46-pm.md
assets/: main_graph.md  placement_graph.md  room_design_graph.md  room_design_subgraph.md
bpy_script/: Exterior_door_bpy.py  READMD.md  randomizing_door.py
docs/: CRYPTOMATTE_REFACTOR.md
experiments/: download_nac_floor_plan.py  objaverse_xl_api_tutorial.py
experiments/floor_plan_geometry_analysis/: floor_plan_geometry_analysis.py
experiments/msd_orientation_normalization/: msd_orientation_normalization.py
experiments/objaverse_asset_size_analysis/: objaverse_asset_sample.json  objaverse_bounding_box_analysis_open3d.csv  objaverse_length_unit_distribution.ipynb  objaverse_length_unit_distribution.py
scene_builder/: __init__.py  config.py  logging.py  main.py
scene_builder/bpy_script/: square_extrusion.py
scene_builder/controllers/: interior_door_controller.py
scene_builder/database/: graphics_db_client.py  material.py  object.py
scene_builder/decoder/: blender.py  (+3 more)
scenes/: generated_scene.yaml  import_scene_to_blender.py
tests/: conftest.py  test_addon_unit.py  test_blender_integration.py  test_blender_object_overlap.py  test_conversions.py  test_design_issue_tracker.py  test_exterior_door_bpy.py  test_floor_mesh.py  test_floor_plan_agent.py  test_floor_plan_postprocessing.py  test_graph_visualization.py  test_linter.py  test_linter_from_yaml.py  test_main_workflow.py  test_material_workflow.py  test_msd_to_blender.py  test_pai_utils.py  test_render.py  test_room_design_workflow.py  test_scene_generation.py  test_shopping_agent.py  test_tools.py
(+81 files in other folders)
